--- a/ITD/main.tex
+++ b/ITD/main.tex
@@ -320,6 +320,9 @@ Then you should uncheck \textit{Enable Instant Run} feature from Android Studio 
     \centering
     \includegraphics[width=0.8\textwidth, keepaspectratio]{ITD/images/extdev_err_solution.png}
     \end{figure}
+    
+\paragraph{Note:}
+If the an Hardware acceleration missing error occurs, it's necessary to enable the Hardware virtualization from the BIOS.
 
 \subsubsection{Device Emulator Set Up}
 In order to allow the emulator communicate with the smartphone, you should connect via USB (with debug enabled) the phone and tell the \textit{Android Debugger} to forward requests from the phone to the emulator and vice-versa using the following command: 
