--- a/ITD/frontpage.tex
+++ b/ITD/frontpage.tex
@@ -22,7 +22,7 @@
     \fontsize{22px}{8mm}\selectfont \textsc{\textbf{Implementation and Testing Document}}
 \end{center}
 \begin{center}
-    \fontsize{14px}{4mm}\selectfont \textsc{{Draft Version 0.2 - 28/12/2018}}
+    \fontsize{14px}{4mm}\selectfont \textsc{{Version 1.0 - 13/01/2019}}
 \end{center}
 \hfill
 \hfill
