Updates from ShareLaTeX

--- a/ATD/main.tex
+++ b/ATD/main.tex
@@ -35,6 +35,10 @@ To perform the acceptance on test cases we used all the documents provided by au
 \newpage
 \section{Installation Setup}
 \subsection{Server Installation}
+Backend installation was straightforward. However, database installation wasn't.\\
+
+We had to ask further instructions to setup the database and explicitly ask to get a database dump (it was asked to construct the database from scratch following the tables described in the document).\\
+
 \subsection{Client Installation}
 
 \newpage
