--- a/ATD/main.tex
+++ b/ATD/main.tex
@@ -46,7 +46,7 @@ We had to ask further instructions to setup the database and explicitly ask to g
 In this section, we will provide the analysis of the acceptance of the test cases we have extract from the documents provided. \newline\newline
 \textbf{Registration}:\newline
 The Registration functionalities work in a correct way. This feature has been tested properly, analysing the different cases, for what concerns general user registration: wrong password, email, FC, birth-date and sex. This has been done also for Third-Parties Registration, not allowing to register users who have submitted wrong IVA, company name and description.\newline
-Beside has been verified that already existing users cannot do the registration again. Furthermore the application permits to activate the account properl
+Beside has been verified that already existing users cannot do the registration again. Furthermore the application permits to activate the account properly.
 \newline\newline
 \textbf{Login}:\newline
 The Login works correctly. Cases as, try to login as a not-existing user or to login providing a wrong password have been tested. Beside user whose account has not been activated cannot log into the system.
